--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
-<iframe src="https://codesandbox.io/embed/zen-brook-4c6lh7?fontsize=14&hidenavigation=1&theme=dark"
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>React recursion example</title>
+</head>
+<body>
+  <iframe src="https://codesandbox.io/embed/zen-brook-4c6lh7?fontsize=14&hidenavigation=1&theme=dark"
      style="width:100%; height:500px; border:0; border-radius: 4px; overflow:hidden;"
      title="zen-brook-4c6lh7"
      allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
      sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"
    ></iframe>
+</body>
+</html>
